--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.3'
 
     testImplementation 'junit:junit:4.13'
+    testImplementation 'org.mockito:mockito-core:3.5.15'
 }
 
 task executable {
